--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -98,7 +98,7 @@
             </div>
             <!-- Modal body -->
             <div class="px-6 pb-6 space-y-6">
-                <form action="/testimony/add" method="POST" class="flex flex-col text-center md:text-left">
+                <form action="/testimony/add" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
                 
                     <div class="flex flex-col my-2">
                         <label for="testimony">
@@ -108,10 +108,10 @@
                     </div>
 
                     <div class="flex flex-col my-2">
-                        <label for="email">
-                            Email
+                        <label for="tag">
+                            Tags
                         </label>
-                        <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" value="{{ user_email }}">
+                        <input type="text" id="tagInput" name="tagInput" class="rounded border border-gray-300 focus:border-violet-800">
                     </div>
                     
                     <button class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
