--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -101,7 +101,7 @@
                 <form action="/testimony/add" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
                 
                     <div class="flex flex-col my-2">
-                        <label for="testimony">
+                        <label for="testimony" class="py-2">
                             Testimony
                         </label>
                         <textarea name="testimony" id="testimony" rows="10" class="rounded border border-gray-300 focus:border-violet-800"></textarea>
