--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,3 +1,15 @@
+{{#if message.success}}
+    <div class="flex space-x-2 px-4 py-2 mb-4 text-sm text-green-700 bg-green-100 rounded-lg items-center justify-center" role="alert">
+        <div class="text-lg pt-1">
+                <ion-icon name="information-circle-outline"></ion-icon>
+        </div>
+        <span class="sr-only">Info</span>
+        <div>
+            <span class="font-medium">{{ message.success }}</span> 
+        </div>
+    </div>
+{{/if}}
+
 {{!-- profile --}}
 <section class="py-10">
     <div class="container text-center mx-auto px-4 md:px-auto md:text-start">
@@ -118,10 +130,9 @@
                             <span onclick="showInfo()" title="Click for more info" class="cursor-pointer text-violet-800 hover:text-violet-600">
                                 <ion-icon name="alert-circle-outline" style="pointer-events:none"></ion-icon>
                             </span>
-                        </label>
-                        <small class="text-violet-800">Separate tags with commas</small>
+                        </label>                        
                         
-                        <select name="tags[]" class="tags rounded border border-gray-300 focus:border-violet-800" multiple>
+                        <select name="tags" class="tags rounded border border-gray-300 focus:border-violet-800" multiple>
                             <option value="Faithful">Faithful</option>
                             <option value="Gracious">Gracious</option>
                             <option value="Provider">Provider</option>
