--- a/public/css/output.css
+++ b/public/css/output.css
@@ -752,6 +752,10 @@ select {
   right: 0px;
 }
 
+.bottom-48 {
+  bottom: 12rem;
+}
+
 .top-\[-400px\] {
   top: -400px;
 }
@@ -764,52 +768,8 @@ select {
   top: 80px;
 }
 
-.top-\[-3\] {
-  top: -3;
-}
-
-.right-\[-10\] {
-  right: -10;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.top-\[-30\] {
-  top: -30;
-}
-
-.top-\[-40\] {
-  top: -40;
-}
-
-.bottom-40 {
-  bottom: 10rem;
-}
-
-.bottom-52 {
-  bottom: 13rem;
-}
-
-.bottom-44 {
-  bottom: 11rem;
-}
-
-.bottom-56 {
-  bottom: 14rem;
-}
-
-.bottom-48 {
-  bottom: 12rem;
-}
-
-.left-12 {
-  left: 3rem;
+.top-\[-10\] {
+  top: -10;
 }
 
 .z-50 {
@@ -872,6 +832,10 @@ select {
   margin-left: auto;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -880,8 +844,12 @@ select {
   margin-top: 2.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mb-\[-2\] {
+  margin-bottom: -2;
 }
 
 .block {
@@ -1067,11 +1035,6 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1170,6 +1133,11 @@ select {
   padding-right: 1.25rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1240,14 +1208,14 @@ select {
   line-height: 2rem;
 }
 
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1297,6 +1265,11 @@ select {
   color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .text-violet-600 {
   --tw-text-opacity: 1;
   color: rgb(124 58 237 / var(--tw-text-opacity));
@@ -1305,11 +1278,6 @@ select {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1452,10 +1420,6 @@ select {
     left: 0px;
   }
 
-  .md\:bottom-56 {
-    bottom: 14rem;
-  }
-
   .md\:bottom-44 {
     bottom: 11rem;
   }
@@ -1541,6 +1505,12 @@ select {
     --tw-space-x-reverse: 0;
     margin-right: calc(2.5rem * var(--tw-space-x-reverse));
     margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:py-0 {
