--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -244,7 +244,7 @@
                                     </div>
                                     
                                     <button class="bg-violet-800 rounded-full text-white py-2 mt-8 mb-2">
-                                        Add
+                                        Update
                                     </button>
                                 </form>
                             </div>
@@ -253,32 +253,16 @@
                 </div>
 
 
-                <div class="grid-item">
+                <div class="grid-item invisible">
                     <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
                         <div class="flex flex-col space-y-5">
                             <div class="flex flex-col">
                                 <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </div>
