--- a/public/css/output.css
+++ b/public/css/output.css
@@ -888,6 +888,10 @@ select {
   height: 100%;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-3\/5 {
   width: 60%;
 }
@@ -898,6 +902,19 @@ select {
 
 .w-5 {
   width: 1.25rem;
+}
+
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
+.min-w-\[1\/2\] {
+  min-width: 1/2;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-md {
