Delete testimony function works successfully

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -208,7 +208,7 @@
                                 <h3 class="text-xl font-semibold text-violet-800">
                                     Edit testimony
                                 </h3>
-                                <button type="button" class="text-violet-800 text-xl hover:bg-violet-800 hover:text-white rounded-full p-1.5 ml-auto inline-flex items-center" data-modal-toggle="editTestimony{{id}}">
+                                <button type="button" class="text-violet-800 text-xl hover:bg-violet-800 hover:text-white rounded-full p-1.5 ml-auto inline-flex items-center" data-modal-toggle="editTestimony{{_id}}">
                                     <ion-icon name="close"></ion-icon>
                                     <span class="sr-only">Close modal</span>
                                 </button>
