--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -116,7 +116,7 @@
                         <label for="testimony" class="py-2">
                             Testimony
                         </label>
-                        <textarea name="testimony" id="testimony" rows="10" class="rounded border border-gray-300 focus:border-violet-800"></textarea>
+                        <textarea name="testimony" id="testimony" rows="10" class="rounded border border-gray-300 focus:border-violet-800" required></textarea>
                     </div>
 
                     <div class="flex flex-col my-2">
@@ -158,6 +158,7 @@
             My testimonies
         </h1>
 
+        {{#if testimonies}}
         <div class="flex items-center justify-center md:justify-start">
             <div class="grid pb-10 gap-4 content-center">
                 {{!-- Columns --}}
@@ -166,7 +167,6 @@
                 <div class="grid-col grid-col--3"></div>
                 {{!-- <div class="grid-col grid-col--4"></div> --}}
 
-        {{#if testimonies}}
             {{#each testimonies}}
                 {{!-- Content --}}
                 <div class="grid-item">
@@ -215,13 +215,13 @@
                             </div>
                             <!-- Modal body -->
                             <div class="px-6 pb-6">
-                                <form action="/testimony/add" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
+                                <form action="/testimony/edit/{{_d}}" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
                                 
                                     <div class="flex flex-col my-2">
                                         <label for="testimony" class="py-2">
                                             Testimony
                                         </label>
-                                        <textarea name="testimony" id="testimony" rows="10" class="rounded border border-gray-300 focus:border-violet-800">{{testimony}}</textarea>
+                                        <textarea name="testimony" id="testimony" rows="10" class="rounded border border-gray-300 focus:border-violet-800" required>{{testimony}}</textarea>
                                     </div>
 
                                     <div class="flex flex-col my-2">
@@ -261,7 +261,7 @@
         {{else}}
             </div>
         </div>
-            <p>No testimonies have been added yet.</p>
+            <p class="container mx-auto p-4 md:px-auto">No testimonies have been added yet.</p>
         {{/if}}
 
 
