Edit testimony works successfully

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -215,7 +215,7 @@
                             </div>
                             <!-- Modal body -->
                             <div class="px-6 pb-6">
-                                <form action="/testimony/edit/{{_d}}" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
+                                <form action="/testimony/{{_id}}?_method=PUT" id="testimonyForm" method="POST" class="flex flex-col text-center md:text-left">
                                 
                                     <div class="flex flex-col my-2">
                                         <label for="testimony" class="py-2">
