Refactored code and sending testimonies to the index page

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -15,6 +15,10 @@
         <ul id="nav-menu" class="z-2 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
         
 
+            <li class="mb-3 text-violet-600 hover:text-violet-600 hover:underline md:my-0">
+                <a href="/" class="">Testimonies</a>
+            </li>
+            
             <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
                 <a href="/login" class="">Login</a>
             </li>
